# structure_clip_owl_vit_app

./: README.md  app.py  pyproject.toml
src/structure_clip_app/: streamlit_app.py
